@@ -276,15 +276,17 @@ GEN     Flx_Frobenius(GEN T, ulong p);
 GEN     Flx_add(GEN x, GEN y, ulong p);
 GEN     Flx_deflate(GEN x0, long d);
 GEN     Flx_deriv(GEN z, ulong p);
-GEN     Flx_double(GEN y, ulong p);
+GEN     Flx_digits(GEN x, GEN T, ulong p);
 GEN     Flx_div_by_X_x(GEN a, ulong x, ulong p, ulong *rem);
 GEN     Flx_divrem(GEN x, GEN y, ulong p, GEN *pr);
+GEN     Flx_double(GEN y, ulong p);
 int     Flx_equal(GEN V, GEN W);
 ulong   Flx_eval(GEN x, ulong y, ulong p);
 ulong   Flx_eval_powers_pre(GEN x, GEN y, ulong p, ulong pi);
 ulong   Flx_eval_pre(GEN x, ulong y, ulong p, ulong pi);
 GEN     Flx_extgcd(GEN a, GEN b, ulong p, GEN *ptu, GEN *ptv);
 ulong   Flx_extresultant(GEN a, GEN b, ulong p, GEN *ptU, GEN *ptV);
+GEN     FlxV_Flx_fromdigits(GEN x, GEN T, ulong p);
 GEN     Flx_gcd(GEN a, GEN b, ulong p);
 GEN     Flx_get_red(GEN T, ulong p);
 GEN     Flx_halfgcd(GEN a, GEN b, ulong p);
