@@ -34,6 +34,7 @@ BA    6- parallel znlog for large characteristic
       7- [libpari] u_chinese_coprime
 BA    8- new GP function elltamagawa
       9- [libpari] RgX_rescale_to_int, RgM_rescale_to_int
+BA   10- [libpari] Flx_digits/FlxV_Flx_fromdigits
 
   Changed
       1- rewrite bnfnarrow
